--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 # ##############################################################################
+# local ------------------------------------------------------------------------
+# ##############################################################################
+
+session/sid.*
+
+# ##############################################################################
 # global -----------------------------------------------------------------------
 # ##############################################################################
 
