fixed ignore path for sessions

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # local ------------------------------------------------------------------------
 # ##############################################################################
 
-session/sid.*
+**/session/sid.*
 
 # ##############################################################################
 # global -----------------------------------------------------------------------
